# MyHiveMind

./: CMakeLists.txt  Dockerfile  README.md  appsettings.json  main.cpp
Common/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  SafeQueue.hpp  Task.cpp  Task.h
Deployment/: CC_Dockerfile  CC_appsettings.json  Client_Dockerfile  docker-compose.yml
HiveMind/: CMakeLists.txt  HiveCommand.cpp  HiveCommand.h  HiveEmulator.cpp  HiveEmulator.h  HiveMind.cpp  HiveMind.h  HiveMindState.cpp  HiveMindState.h  IHiveLogic.h  Interference.cpp  RequestProcessor.cpp  RequestProcessor.h
HiveMind/HiveEmulator/: CMakeLists.txt  HiveEmulator.cpp  HiveEmulator.h  HiveMindState.cpp  HiveMindState.h  IHiveController.cpp  IHiveController.h  IHiveLogic.cpp  Interference.h  SimpleHiveLogic.cpp  SimpleHiveLogic.h
HiveMind/Threads/: CMakeLists.txt  PingThread.cpp  PingThread.h  TelemetryThread.cpp  TelemetryThread.h
Tests/: CMakeLists.txt  test_main.cpp  test_queue.cpp  test_response.cpp
WebServer/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpClientWorker.cpp  HttpClientWorker.h  HttpConnection.cpp  HttpConnection.h  HttpParser.cpp  HttpParser.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  WebServer.cpp  WebServer.h
